--- a/sp_layout.css
+++ b/sp_layout.css
@@ -1,13 +1,13 @@
 @charset "utf-8";
 
 /*
-   New Perspectives on HTML5 and CSS3, 7th Edition
+   New Perspectives on HTML5 and CSS3, 8th Edition
    Tutorial 3
    Case Problem 1
    
    Layout styles for Slate and Pencil Tutoring
-   Author: Hesbon Osoro
-   Date: 12/7/22   
+   Author: Nathaniel T. Aglio
+   Date: 3/23/2024  
    
    Filename: sp_layout.css
 
